# rubyfmt.run

./: .gitignore  Cargo.toml  README.md  build.sh  netlify.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: approve-dependabot.yml  ci.yml  update-rubyfmt.yml
src/: lib.rs
web/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
