[package]
name = "rubyfmt-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
rubyfmt = { git = "https://github.com/fables-tales/rubyfmt", rev = "081d3af0a98f8202c94a630e1219984e121bb5aa", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
