[package]
name = "rubyfmt-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
rubyfmt = { git = "https://github.com/fables-tales/rubyfmt", rev = "5e478d5a7de5307b8e51ad8de4e9d3f4a266a871", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
