[package]
name = "rubyfmt-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
rubyfmt = { git = "https://github.com/fables-tales/rubyfmt", rev = "d3d433caffa02446a295f60fd8b727099bebbb97", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
